samples/_failures_safe/1761274370_68b485_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8851f424.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_8851f424.c:160:9: error: expected declaration or statement at end of input
  160 |         }
      |         ^
./samples/SAFE/__tmp_8851f424.c:160:9: error: expected declaration or statement at end of input
